add beautifulsoup to environment file

--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ dependencies:
     - pip
     - python
     - pip:
+        - beautifulsoup4
         - black
         - cookiecutter
         - ipywidgets
